aggiunti placeholder per le card

--- a/index.html
+++ b/index.html
@@ -28,6 +28,30 @@
 
     <!-- Main -->
     <main>
+        <div class="my-container">
+            <div class="card">
+                <img id="card-img" src="">
+                <div class="card-body">
+                    <p>Data</p>
+                    <p>Title</p>
+                </div>
+            </div>
+            <div class="card">
+                <img id="card-img" src="">
+                <div class="card-body">
+                    <p>Data</p>
+                    <p>Title</p>
+                </div>
+            </div>
+            <div class="card">
+                <img id="card-img" src="">
+                <div class="card-body">
+                    <p>Data</p>
+                    <p>Title</p>
+                </div>
+            </div>
+        </div>
+
     </main>
 
 
