aggiunto script per importare contenuti dell'api

--- a/index.html
+++ b/index.html
@@ -29,29 +29,16 @@
     <!-- Main -->
     <main>
         <div class="my-container">
-            <div class="card">
-                <img id="card-img" src="">
-                <div class="card-body">
-                    <p>Data</p>
-                    <p>Title</p>
-                </div>
-            </div>
-            <div class="card">
-                <img id="card-img" src="">
-                <div class="card-body">
-                    <p>Data</p>
-                    <p>Title</p>
-                </div>
-            </div>
-            <div class="card">
-                <img id="card-img" src="">
-                <div class="card-body">
-                    <p>Data</p>
-                    <p>Title</p>
+            <div id="card-container">
+                <div id="card">
+                    <img id="card-img" src="">
+                    <div class="card-body">
+                        <p>Data</p>
+                        <p>Title</p>
+                    </div>
                 </div>
             </div>
         </div>
-
     </main>
 
 
