--- a/index.html
+++ b/index.html
@@ -29,15 +29,7 @@
     <!-- Main -->
     <main>
         <div class="my-container">
-            <div id="card-container">
-                <div id="card">
-                    <img id="card-img" src="">
-                    <div class="card-body">
-                        <p>Data</p>
-                        <p>Title</p>
-                    </div>
-                </div>
-            </div>
+            <div id="card-container"></div>
         </div>
     </main>
 
