aggiunte puntine alle foto

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 
     <!-- Main -->
     <main>
+        <!-- Container main -->
         <div class="my-container">
+            <!-- Container card -->
             <div id="card-container"></div>
         </div>
     </main>
 
-
-
-
+    <!-- Script JS -->
     <script src="assets/js/script.js"></script>
 </body>
 
