--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/tablet.css">
+    <link rel="stylesheet" href="assets/css/mobile.css">
 </head>
 
 <body>
