aggiunto overlay alla pagina

--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
 
     <!-- Main -->
     <main>
+        <div id="overlay"></div>
         <!-- Container main -->
         <div class="my-container">
             <!-- Container card -->
-            <div id="card-container"></div>
+            <div id="card-container">
+            </div>
         </div>
     </main>
 
