separata classe per diplay overlay

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- Main -->
     <main>
-        <div id="overlay"></div>
+        <div id="overlay" class="display"></div>
         <!-- Container main -->
         <div class="my-container">
             <!-- Container card -->
