aggiunto apri e chiudi per overlay

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 
     <!-- Main -->
     <main>
-        <div id="overlay" class="display"></div>
+        <div id="overlay">
+            <button id="button">CHIUDI</button>
+        </div>
         <!-- Container main -->
         <div class="my-container">
             <!-- Container card -->
