aggiunta immagine corretta che si apre al click

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <main>
         <div id="overlay">
             <button id="button">CHIUDI</button>
+            <div class="big-image-box"></div>
         </div>
         <!-- Container main -->
         <div class="my-container">
