stilizzata immagine grande e fine esercizio

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <main>
         <div id="overlay">
             <button id="button">CHIUDI</button>
-            <div class="big-image-box"></div>
+            <div class="big-image-box">
+            </div>
         </div>
         <!-- Container main -->
         <div class="my-container">
